Added Activities for the landing page that takes you to the login screen and added a landing page that is after the login page. All of these are linked together with button actions. Need to work on the appearance of these to make them more Discover like.

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="username_placeholder">Credit Card User ID</string>
 	<string name="password_placeholder">Credit Card Password</string>
 	<string name="login_button_text">Log In</string>
+	<string name="card_login_button_text">Secure Credit Card Login</string>
 </resources>
