--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -5,4 +5,13 @@
 	<string name="password_placeholder">Credit Card Password</string>
 	<string name="login_button_text">Log In</string>
 	<string name="card_login_button_text">Secure Credit Card Login</string>
+	<string name="remember_user_id">Remember Card User ID</string>
+	<string name="image_description">Discover</string>
+	<string name="secure_login">Secure Credit Card Log In</string>
+	<string name="register_now">Register Now </string>
+	<string name="forgot_id_or_pass_label">Forgot User ID or Password?</string>
+	<color name="white">#ffffff</color>
+	<color name="black">#000</color>
+	<color name="blue">#025D96</color>
+	<color name="orange">#FD6C04</color>
 </resources>
