--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 	<string name="register_now">Register Now </string>
 	<string name="forgot_id_or_pass_label">Forgot User ID or Password?</string>
 	<string name="login_error">Sorry. The User ID and/or Password does not match our records, or you are not registered. Please try again.</string>
+	<string name="login_attempt_warning">You have one more log in attempt today. For security purposes, we limit the number of attempts to enter your information. If you think you are receiving this message in error, call 1-877-742-7822.</string>
 	<string name="feedback_text">Provide Feedback</string>
 	<string name="discover_copyright_text">© 2012 Discover Bank, Member FDIC</string>
 	<string name="member_title_text">MST0 23075 CARDMEMBER</string>
