--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -11,16 +11,26 @@
 	<string name="register_now">Register Now </string>
 	<string name="forgot_id_or_pass_label">Forgot User ID or Password?</string>
 	<string name="login_error">Sorry. The User ID and/or Password does not match our records, or you are not registered. Please try again.</string>
-	<string name="login_attempt_warning">You have one more log in attempt today. For security purposes, we limit the number of attempts to enter your information. If you think you are receiving this message in error, call 1-877-742-7822.</string>
+	<string name="login_attempt_warning">You have one more log in attempt today. For security purposes, we limit the number of attempts to enter your information. If you think you are receiving this message in error, call 1\-877\-742\-7822.</string>
 	<string name="feedback_text">Provide Feedback</string>
 	<string name="discover_copyright_text">© 2012 Discover Bank, Member FDIC</string>
 	<string name="member_title_text">MST0 23075 CARDMEMBER</string>
 	<string name="member_id_text">Discover Card Ending 4545</string>
 	<string name="discover_secured_text">Discover Bank, Member FDIC | SECURED</string>
+	<string name="account_informaiton_step_lablel_one">Step 1 of 2: Enter Account Information</string>
+	<!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
+	<string name="account_information_input_info_label">(This is a 16&#8211;digit number starting with 6011. Do not include space or hyphens.)</string>
+	<string name="card_expiration_date_text">Discover Card Expiration Date:</string>
+	<string name="need_help_text">Need Help?</string>
+	<!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
+	<string name="need_help_number_text">Call 1&#8211;800&#8211;347&#8211;2683</string>
+	<string name="ssn_prefix">XXX &#8211; XX &#8211;</string>
 	
 	<color name="white">#ffffff</color>
 	<color name="black">#000</color>
 	<color name="blue">#025D96</color>
 	<color name="orange">#FD6C04</color>
 	<color name="red">#ff0000</color>
+	<string name="register_text">Register</string>
+	<string name="account_info_label_one">Credit Card Account Number:</string>
 </resources>
