--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -19,12 +19,17 @@
 	<string name="discover_secured_text">Discover Bank, Member FDIC | SECURED</string>
 	<string name="account_informaiton_step_lablel_one">Step 1 of 2: Enter Account Information</string>
 	<!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
-	<string name="account_information_input_info_label">(This is a 16&#8211;digit number starting with 6011. Do not include space or hyphens.)</string>
+	<string name="account_info_input_restrictions_label">(This is a 16&#8211;digit number starting with 6011. Do not include space or hyphens.)</string>
 	<string name="card_expiration_date_text">Discover Card Expiration Date:</string>
 	<string name="need_help_text">Need Help?</string>
 	<!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
 	<string name="need_help_number_text">Call 1&#8211;800&#8211;347&#8211;2683</string>
 	<string name="ssn_prefix">XXX &#8211; XX &#8211;</string>
+	<string name="account_info_dob_text">Date of Birth of Primary Cardmember:</string>
+	<string name="year_hint">YYYY</string>
+	<string name="account_info_ssn_info_text">Social Security Number of Primary Cardmember:</string>
+	<string name="cancel_text">Cancel</string>
+	<string name="continue_text">Continue</string>
 	
 	<color name="white">#ffffff</color>
 	<color name="black">#000</color>
