--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -37,8 +37,10 @@
 	<string name="account_security_remember_device_text">Would you like us to remember this device?</string>
 	<string name="account_security_whats_this_text">What\'s this?</string>
 	<string name="account_security_plus_text">+</string>
+	<string name="account_security_minus_text">-</string>
 	<string name="account_security_remember_me_text">Yes. This is my mobile device that I use to access my Account.</string>
 	<string name="account_security_dont_remember_me_text">No. This is a public or shared device or one I don\'t plan on using often to access my account.</string>
+	<string name="account_security_whats_this_detail_text">Choose "Yes" if this is a private device that you will frequently use to access your account. By doing so, you\'ll still benefit from heightened account security, but will receive fewer security question prompts when logging in. Choose "No" if this is a public device or you share it with others who are not authorized Cardmembers on your account.</string>
 	
 	<color name="white">#ffffff</color>
 	<color name="black">#000</color>
