--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -1,14 +1,7 @@
 <resources>
 
     <string name="app_name">Discover</string>
-    <string name="username_placeholder">Credit Card User ID</string>
-	<string name="password_placeholder">Credit Card Password</string>
-	<string name="login_button_text">Log In</string>
-	<string name="card_login_button_text">Secure Credit Card Login</string>
-	<string name="remember_user_id">Remember Card User ID</string>
-	<string name="image_description">Discover</string>
-	<string name="secure_login">Secure Credit Card Log In</string>
-	<string name="register_now">Register Now </string>
+    
 	<string name="forgot_id_or_pass_label">Forgot User ID or Password?</string>
 	<string name="login_error">Sorry. The User ID and/or Password does not match our records, or you are not registered. Please try again.</string>
 	<string name="login_attempt_warning">You have one more log in attempt today. For security purposes, we limit the number of attempts to enter your information. If you think you are receiving this message in error, call 1\-877\-742\-7822.</string>
@@ -24,6 +17,8 @@
 	<string name="account_info_two_pass_text">Create a Password:</string>
 	<string name="account_info_two_pass_info_text">(Must be 8&#8211;32 characters and have at least one letter and one number. Your password is case sensitivie and can also use all special characters.)</string>
 	<string name="account_info_two_confirm_id_text">Confirm User ID:</string>
+	<string name="account_info_two_id_strength_text">User ID Strength:</string>
+	<string name="account_info_two_pass_strength_text">Password Strength:</string>
 	
 	<!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
 	<string name="account_info_input_restrictions_label">(This is a 16&#8211;digit number starting with 6011. Do not include space or hyphens.)</string>
@@ -31,13 +26,9 @@
 	<string name="need_help_text">Need Help?</string>
 	<!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
 	<string name="need_help_number_text">Call 1&#8211;800&#8211;347&#8211;2683</string>
-	<string name="ssn_prefix">XXX &#8211; XX &#8211;</string>
 	<string name="account_info_dob_text">Date of Birth of Primary Cardmember:</string>
-	<string name="year_hint">YYYY</string>
 	<string name="account_info_ssn_info_text">Social Security Number of Primary Cardmember:</string>
-	<string name="cancel_text">Cancel</string>
-	<string name="continue_text">Continue</string>
-	<string name="submit_text">Submit</string>
+	
 	<string name="account_security_text">Enhanced Account Security</string>
 	<string name="account_security_info_text">For your security, please answer the following question before continuing.</string>
 	<string name="account_security_placeholder_text">¿Security Question Placeholder?</string>
@@ -58,6 +49,29 @@
 	<color name="blue">#025D96</color>
 	<color name="orange">#FD6C04</color>
 	<color name="red">#ff0000</color>
+	<color name="green">#008100</color>
+	<color name="yellow">#FFCC00</color>
+	<color name="gray">#CCCCCC</color>
+	
 	<string name="register_text">Register</string>
 	<string name="account_info_label_one">Credit Card Account Number:</string>
+	<string name="cancel_text">Cancel</string>
+	<string name="continue_text">Continue</string>
+	<string name="submit_text">Submit</string>
+	<string name="year_hint">YYYY</string>
+	<string name="ssn_prefix">XXX &#8211; XX &#8211;</string>
+	<string name="secure_login">Secure Credit Card Log In</string>
+	<string name="register_now">Register Now </string>
+	<string name="username_placeholder">Credit Card User ID</string>
+	<string name="password_placeholder">Credit Card Password</string>
+	<string name="login_button_text">Log In</string>
+	<string name="card_login_button_text">Secure Credit Card Login</string>
+	<string name="remember_user_id">Remember Card User ID</string>
+	<string name="image_description">Discover</string>
+	<string name="strength_bar_text">Strength!</string>
+	<string name="strength_bar_not_valid">Not Valid.</string>
+	<string name="strength_bar_moderate">Moderate</string>
+	<string name="strength_bar_strong">Strong</string>
+	<string name="EMPTY"></string>
+	
 </resources>
