Severely modified the InputValidator. It is now a little more generic I guess, and is more easily changeable. It no longer stores any vital information and just stores the state of the check you do. Works good for me for now.Changed the size of the register user 'link' on the login screen. It's much easier to touch now.Added "Invalid input" labels to the account information screen when there is invalid input. The dropdowns and text fields need to be highlighted on bad input. But their input is being checked.Email validation checking is currently not working - needs to somehow validate a *@*.* address I guess.

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -64,6 +64,7 @@
 	<color name="green">#008100</color>
 	<color name="yellow">#FFCC00</color>
 	<color name="gray">#CCCCCC</color>
+	<color name="lightRed">#1fff0000</color>
 	
 	<string name="register_text">Register</string>
 	<string name="account_info_label_one">Credit Card Account Number:</string>
@@ -86,4 +87,5 @@
 	<string name="strength_bar_strong">Strong</string>
 	<string name="empty"></string>
 	<string name="home_text">Home</string>
+	<string name="invalid_value">Invalid value</string>
 </resources>
