--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -31,6 +31,8 @@
 	<string name="email_placeholder">mail@mail.com</string>
 	<string name="account_info_confirm_id_placeholder_text">Chuck Yeager</string>
 	<string name="account_info_confirm_note_text">Please Note: If you currently use Secure online Account Numbers, that password has also been changed.</string>
+	<string name="account_info_help_pass_strength_text">Password Strength:</string>
+	<string name="account_info_help_not_valid_detail_label">Does not meet minimum requirements (not 8&#8211;32 characters, does not contain at least 1 letter and 1 number, or is the word "password").</string>
 	
 	<!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
 	<string name="account_info_input_restrictions_label">(This is a 16&#8211;digit number starting with 6011. Do not include space or hyphens.)</string>
@@ -82,7 +84,7 @@
 	<string name="remember_user_id">Remember Card User ID</string>
 	<string name="image_description">Discover</string>
 	<string name="strength_bar_text">Strength!</string>
-	<string name="strength_bar_not_valid">Not Valid.</string>
+	<string name="strength_bar_not_valid">Not Valid</string>
 	<string name="strength_bar_moderate">Moderate</string>
 	<string name="strength_bar_strong">Strong</string>
 	<string name="empty"></string>
