--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -43,6 +43,7 @@
 	<string name="need_help_number_text">Call 1&#8211;800&#8211;347&#8211;2683</string>
 	<string name="account_info_dob_text">Date of Birth of Primary Cardmember:</string>
 	<string name="account_info_ssn_info_text">Social Security Number of Primary Cardmember:</string>
+	<string name="account_info_error_text">You have entered invalid information. Carefully review your information and please try again.</string>
 	<string name="account_info_help_id_strength_text">User ID Strength</string>
 	<string name="account_info_help_bar_title_text">User ID Strength:</string>
 	<string name="account_info_help_id_p1_text">Does not meet minimum requirements (not 6&#8211;16 characters, looks like an account number, or uses spaces or the following characters: (\`)(\')(\")(\\))</string>
