AndroidManifest.xml - Removed some whitespace. Added new activity for ForgotCredentials and ForgotUserId. account_info.xml - Renamed the title label to be more generic since we are now using this screen for more than one similar purpose. login.xml - Removed an unecessary table row and replaced it with the TextView that was previously inside it and made it clickable. This also means I was able to remove the unnecessary invisible button that was used as whitespace… resources.xml - Added a new string array resource that is not currently used as it is just hard coded into the activity at the moment. strings.xml - Added new variables for new screens. And a new color. Overall nothing to see here. LoginActivity.java - Added support for the "Forgot User ID or Password?" link. Now starts an activity and works! AccountInformationActivity.java - Added support for forgot password and forgot both options. So this activity will support 3 functions in the future. A user forgetting their pass, id and pass, and registering a new user. Added newlines to the intent creation so it does not exceed 80 chars on the screen. forgot_id.xml - New layout for the forgot ID activity - its different than forgot pass or forgot both. ForgotUserIdActivity.java - Handles and validates proper input. Needs to get a service call though. ForgotCredentialsActivity.java - Main activity for when a user presses the "Forgot User ID or Password?" link from the home screen. Seems to function as required. CustomArrayAdapter.java - A subclass of ArrayAdapter<String> to allow list elements to have those fancy arrow indicators on the ForgotCredentialsActivity activity. big_error.xml - Added generic debugging layout in case it is needed. Should be used when a layout cant get set properly.
If I missed anything it was obviously not important… duh.

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -27,7 +27,7 @@
 	<string name="account_info_confirm_email_title_text">E&#8211;mail Address</string>
 	<string name="account_info_confirm_account_title_text">Account Number</string>
 	<string name="account_info_confirm_account_stars_text">**** **** **** </string>
-	<string name="account_info_confirm_account_text">8888</string>
+	<string name="account_info_confirm_account_text">1337</string>
 	<string name="email_placeholder">mail@mail.com</string>
 	<string name="account_info_confirm_id_placeholder_text">Chuck Yeager</string>
 	<string name="account_info_confirm_note_text">Please Note: If you currently use Secure online Account Numbers, that password has also been changed.</string>
@@ -44,6 +44,7 @@
 	<string name="account_info_dob_text">Date of Birth of Primary Cardmember:</string>
 	<string name="account_info_ssn_info_text">Social Security Number of Primary Cardmember:</string>
 	<string name="account_info_error_text">You have entered invalid information. Carefully review your information and please try again.</string>
+	
 	<string name="account_info_help_id_strength_text">User ID Strength</string>
 	<string name="account_info_help_bar_title_text">User ID Strength:</string>
 	<string name="account_info_help_id_p1_text">Does not meet minimum requirements (not 6&#8211;16 characters, looks like an account number, or uses spaces or the following characters: (\`)(\')(\")(\\))</string>
@@ -65,6 +66,18 @@
 	<string name="account_info_two_email_text">Email Address:</string>
 	<string name="account_info_two_email_info_text">(Used to confirm receipt of your online account registration.)</string>
 	
+	<string name="forgot_id_title_text">Forgot User ID</string>
+	<string name="forgot_id_password_text">Account Center Password:</string>
+	<string name="forgot_id_submission_error_text">
+	    We\'re sorry. The Credit Card Account Number and/or Password does not
+	    match our records, or you are not registered. Please try again.
+	</string>
+	
+	<string name="forgot_password_text">Forgot Password</string>
+	<string name="forgot_both_text">Forgot Both</string>
+	
+	<string name="arrow">></string>
+	<string name="forgot_credentials_text">Forgot User ID or Password</string>
 	<color name="white">#ffffff</color>
 	<color name="black">#000</color>
 	<color name="blue">#025D96</color>
@@ -74,7 +87,10 @@
 	<color name="yellow">#FFCC00</color>
 	<color name="gray">#CCCCCC</color>
 	<color name="lightRed">#1fff0000</color>
-	
+	<color name="lightBlue">#d0025D96</color>
+	<string name="vital_artery_eviscerating_error_text">Woah! Pump your brakes
+	     homie! Something hella bad went wrong. You shouldn\'t see this. 
+	     Check yo self!</string>
 	<string name="register_text">Register</string>
 	<string name="account_info_label_one">Credit Card Account Number:</string>
 	<string name="cancel_text">Cancel</string>
