--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -2,6 +2,9 @@
 
     <string name="app_name">Discover</string>
     
+    <string name="menu_notifications">Notifications</string>
+    <string name="menu_logout">Logout</string>
+    
 	<string name="forgot_id_or_pass_label">Forgot User ID or Password?</string>
 	<string name="login_error">Sorry. The User ID and/or Password does not match our records, or you are not registered. Please try again.</string>
 	<string name="login_attempt_warning">You have one more log in attempt today. For security purposes, we limit the number of attempts to enter your information. If you think you are receiving this message in error, call 1\-877\-742\-7822.</string>
