InputValidator - updated the user id check so that it works like the strength bars -> it will return true -> good password if the password if of moderate strength or higher. StrongAuthCall - Added call for strong auth check. Sends the call but the content type and format is off - needs minor tweaking. StrongAuthDetails - data object that will be returned on a strong auth - will contain the strong auth question that the user is supposed to answer. RegistrationOneDetails - Renamed to AccountInformationDetails RegistrationOneCall - Renamed to AccountInformationCall RegistrationCallTwo - Renamed to CreateLoginCall RegistrationTwoDetails - Renamed to CreateLoginDetails RegistrationConfirmationDetails - Modified to handle the renamed details file. ForgotPasswordCall - Was pointing to the wrong service URL durrrr. Fixed. ForgotPasswordTwoCall - New call to update a users password to a new one. ForgotPasswordTwoDetails - The second part of the POST details for changing a users password. AndroidManifest - Modified to work with some of the refactoring and moving around of packages. enter_new_password.xml - The screen that the user uses to enter their new password from. Part 2 of the forgot password flow. EnterNewPasswordActivity - The activity that is associated with step 2 of the forgot password flow.
AccountInformationActivity - Fixed issue with pressing submit before any information was added. Now checks to see if all the info was valid before displaying the spinner and attempting to submit the info.
CreateLoginActivity - Updated for new packages and file names from refactoring.

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -56,4 +56,6 @@
 	<string name="empty"></string>
 	<string name="home_text">Home</string>
 	<string name="invalid_value">Invalid value</string>
+	<string name="forgot_pass_create_new_text">Create a New Password:</string>
+	<string name="forgot_pass_step_two_text">Step 2 of 2: Create New Password</string>
 </resources>
