Added "Go back" link to help screens. Added footer to password strength bar help page.

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -32,6 +32,9 @@
 	<string name="could_not_complete_request">
 	    Your Request Could Not Be Completed
 	</string>
+	<string name="go_back">
+	    Go back
+	</string>
 	<string name="forgot_password_text">Forgot Password</string>
 	<string name="forgot_both_text">Forgot Both</string>
 	<string name="forgot_password_field_title_text">Credit Card User ID:</string>
