Cherry pick of commit on 11/21/12:
Added error codes to the commons project so that classes can 'implement' them and use the constants defined within. Created a new strong auth package in commons project. Added strong auth error response and parser to handle parsing the strong auth header. Fixed layout files and the hack that was included to prevent auto focus of edit text elements. Made more use of roboguise in some classes too.

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -35,6 +35,9 @@
 	<string name="could_not_complete_request">
 	    Your Request Could Not Be Completed
 	</string>
+	<string name="unkown_error_text">
+	    Unknown error with the server, please try again later.
+	</string>
 	<string name="go_back">
 	    Go back
 	</string>
