--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -5,8 +5,13 @@
     <string name="menu_notifications">Notifications</string>
     <string name="menu_logout">Logout</string>
     
-	<string name="login_error">Sorry. The User ID and/or Password does not match our records, or you are not registered. Please try again.</string>
-	<string name="login_attempt_warning">You have one more log in attempt today. For security purposes, we limit the number of attempts to enter your information. If you think you are receiving this message in error, call 1\-877\-742\-7822.</string>
+	<string name="login_error">
+	    Sorry. The User ID and/or Password does not match our records, or you are not registered. Please try again.
+	</string>
+	<string name="login_attempt_warning">
+	    You have one more log in attempt today. For security purposes, we limit the number of attempts to enter your 
+	    information. If you think you are receiving this message in error, call 1&#8211;877&#8211;742&#8211;7822.
+	</string>
 	<string name="feedback_text">Provide Feedback</string>
 	<string name="discover_copyright_text">© 2013 Discover Bank, Member FDIC</string>
 	<string name="member_title_text">MST0 23075 CARDMEMBER</string>
@@ -48,9 +53,6 @@
 	</string>
 	<string name="logout">
 	    Logout
-	</string>
-	<string name="final_login_attempt">
-	    You have one more log in attempt today. For security purposes, we limit the number of attempts to enter your information. If you think you are receiving this message in error, call tel:18777427822 1-877-742-7822.
 	</string>
 	<string name="forgot_password_text">Forgot Password</string>
 	<string name="forgot_both_text">Forgot Both</string>
