Created a status header for the registration. Can also be used for any other screen that needs the status indicator

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -121,5 +121,17 @@
 	<string name="generic_error_title">
 	    An unexpected problem occurred
 	</string>
+	
+	<string name = "enter_info">
+	    Enter Info
+	</string>
+	
+	<string name = "create_password">
+	    Create Password
+	</string>
+	
+	<string name = "confirm">
+	    Confirmation
+	</string>
 	    
 </resources>
