added ACRA for error reporting

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -133,5 +133,9 @@
 	<string name = "confirm">
 	    Confirmation
 	</string>
+	
+	<string name="crash_report">
+	    Preparing Email Crash Report
+	</string>
 	    
 </resources>
