--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -22,7 +22,7 @@
 	<string name="card_expiration_date_text">Card Expiration Date:</string>
 	<string name="need_help_text">Need Help?</string>
 	<!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
-	<string name="need_help_number_text">Call 1&#8211;800&#8211;347&#8211;2683</string>
+	<string name="need_help_number_text">1&#8211;800&#8211;347&#8211;2683</string>
 	
 	<string name="forgot_id_title_text">Forgot User ID</string>
 	<string name="forgot_id_password_text">Account Center Password:</string>
