US3808 : TA8807 - Updated UI to contain all card and bank information that was in the incomplete comps.

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -142,5 +142,12 @@
 	<string name="crash_report">
 	    Preparing Email Crash Report
 	</string>
+	
+	<string name="discover_card">
+	    Discover Card
+	</string>
+	<string name="discover_bank">
+	    Discover Bank
+	</string>
 	    
 </resources>
