US3745 : TA10484 : TA10543(in progress) - Text Fields that extend ValidatedInputField now show a X icon that will clear the input field upon click. Added methods for stylizing an account number field to the common methods - task is still incomplete as it turns out to be more difficult than expected. Updated the appearance of the date pickers so that they are the same size. Added an abstract method to ValidatedInputField that returns the focused and non focused EMS lengths, so that fields can change size when selected, for small screens. Removed duplicate methods from CommonUtils that were already defined in CommonMethods. Added another form of inputs for account numbers in register step 1 (4 separate fields) pending final decisions by Discover on how this should be presented. Updated Text in reg step 1.

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="discover_secured_text">Discover Bank, Member FDIC | SECURED</string>
     <string name="email_placeholder">mail@mail.com</string>
     <!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
-    <string name="card_expiration_date_text">Card Expiration Date:</string>
+    <string name="card_expiration_date_text">Card Expiration Date</string>
     <string name="need_help_text">Need Help?</string>
     <!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
     <string name="need_help_number_text">1&#8211;800&#8211;347&#8211;2683</string>
@@ -33,11 +33,11 @@
     <string name="logout">Logout</string>
     <string name="forgot_password_text">Forgot Password</string>
     <string name="forgot_both_text">Forgot Both</string>
-    <string name="forgot_password_field_title_text">Credit Card User ID:</string>
+    <string name="forgot_password_field_title_text">Credit Card User ID</string>
     <string name="arrow">></string>
     <string name="forgot_credentials_text">Forgot User ID or Password</string>
     <string name="register_text">Register</string>
-    <string name="account_info_label_one">Credit Card Account Number:</string>
+    <string name="account_info_label_one">Credit Card Account Number</string>
     <string name="cancel_text">Cancel</string>
     <string name="continue_text">Continue</string>
     <string name="submit_text">Submit</string>
@@ -54,6 +54,7 @@
     <string name="empty"></string>
     <string name="home_text">Home</string>
     <string name="doesnt_match_records">Doesn\'t Match Our Records</string>
+    <string name="invalid_input">Invalid input</string>
     <string name="forgot_pass_create_new_text">Create a New Password:</string>
     <string name="forgot_pass_step_two_text">Step 2 of 2: Create New Password</string>
     <string name="max_attempts_exceeded_text">You have Exceeded the Maximum Number of Unsuccessful Attempts.
