--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="need_help_text">Need Help?</string>
     <!-- &#8211; is a dash character so that lint will not complain of using a dash in strings -->
     <string name="need_help_number_text">1&#8211;800&#8211;347&#8211;2683</string>
+    <string name="bank_need_help_number_text">1&#8211;800&#8211;290&#8211;9885</string>
     <string name="forgot_id_title_text">Forgot User ID</string>
     <string name="forgot_id_password_text">Account Center Password:</string>
     <string name="forgot_id_submission_error_text">We\'re sorry. The Credit Card Account Number and/or Password does not
